# consensus

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/: WORKFLOWS_ADDED.md  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  go-ci.yml  node-ci.yml  python-ci.yml  rust-ci.yml
_bmad-output/planning-artifacts/architecture/: poker-consensus-engine-architecture.md
_bmad-output/planning-artifacts/research/: technical-leaderless-async-bft-consensus-timestamping-research-2025-12-31.md
_bmad-output/planning-artifacts/stories/: poker-consensus-stories.md
_bmad-output/planning-artifacts/tech-spec/: poker-consensus-engine-tech-spec.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: bmm-brainstorming-session-2025-11-30T10-55-00Z.md  bmm-research-scope-2025-11-30T10-55-00Z.md  bmm-workflow-status.yaml  prd.md
node/: Cargo.toml
node/src/: main.rs
pallets/bls/: Cargo.toml
pallets/bls/src/: lib.rs  weights.rs
pallets/dkg/: Cargo.toml
pallets/dkg/src/: lib.rs  weights.rs
pallets/poker/: Cargo.toml
pallets/poker/src/: lib.rs  weights.rs
pallets/timestamp/: Cargo.toml
pallets/timestamp/src/: lib.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
substrate-template/: Cargo.toml
substrate-template/node/: Cargo.toml
substrate-template/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
substrate-template/pallets/custom/bls/: Cargo.toml
substrate-template/pallets/custom/bls/src/: lib.rs  weights.rs
substrate-template/pallets/custom/dkg/: Cargo.toml
substrate-template/pallets/custom/dkg/src/: lib.rs  weights.rs
substrate-template/pallets/custom/poker/: Cargo.toml
substrate-template/pallets/custom/poker/src/: lib.rs  weights.rs
substrate-template/pallets/custom/timestamp/: Cargo.toml
substrate-template/pallets/custom/timestamp/src/: lib.rs  weights.rs
substrate-template/runtime/: Cargo.toml
substrate-template/runtime/src/: lib.rs
