[workspace]
resolver = "2"
members = [
    "pallets/poker",
    "pallets/timestamp",
    "pallets/dkg",
    "pallets/bls",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Poker Consensus Engine Team"]

# Pin problematic dependencies
[workspace.dependencies]
base64ct = "=1.6.0"

# Substrate dependencies (Polkadot v1.0.0 compatible)
sp-api = { version = "14.0.0", default-features = false }
sp-block-builder = { version = "14.0.0", default-features = false }
sp-consensus = { version = "0.14.0-dev", default-features = false }
sp-consensus-babe = { version = "0.14.0-dev", default-features = false }
sp-consensus-grandpa = { version = "0.14.0-dev", default-features = false }
sp-core = { version = "14.0.0", default-features = false }
sp-inherents = { version = "14.0.0", default-features = false }
sp-io = { version = "14.0.0", default-features = false }
sp-runtime = { version = "14.0.0", default-features = false }
sp-session = { version = "14.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "14.0.0", default-features = false }

# Frame dependencies
frame-benchmarking = { version = "14.0.0", default-features = false }
frame-support = { version = "14.0.0", default-features = false }
frame-system = { version = "14.0.0", default-features = false }
frame-executive = { version = "14.0.0", default-features = false }

# Serialization
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
