[package]
name = "poker-consensus-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Poker Consensus Engine - Substrate node implementation"

[dependencies]
# Substrate
frame-benchmarking = { workspace = true, features = ["cli"] }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false }

# Local
poker-consensus-runtime = { path = "../runtime" }

# SCALE codec
codec = { workspace = true }
scale-info = { workspace = true }

# Substrate node
sc-cli = { version = "0.10.0-dev", features = ["wasmtime"] }
sc-executor = { version = "0.10.0-dev", features = ["wasmtime"] }
sc-service = { version = "0.10.0-dev", features = ["wasmtime"] }
sc-telemetry = { version = "9.0.3", features = ["jsonRPCClient"] }
sc-transaction-pool = { version = "4.0.0-dev" }
sc-offchain = { version = "4.0.0-dev" }
sc-consensus-babe = { version = "0.10.0-dev" }
sc-consensus-grandpa = { version = "0.10.0-dev" }
sc-consensus = { version = "0.10.0-dev" }
sc-authority-discovery = { version = "0.10.0-dev" }
sc-chain-spec = { version = "4.0.0-dev" }
sc-rpc = { version = "4.0.0-dev" }
sc-rpc-api = { version = "4.0.0-dev" }
sc-basic-authorship = { version = "0.10.0-dev" }
sc-network = { version = "0.10.0-dev" }
sc-network-sync = { version = "0.10.0-dev" }

# Substrate primitives
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { version = "4.0.0-dev" }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-keystore = { version = "0.27.0" }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-inherents = { workspace = true }

# Async
futures = "0.3.21"
futures01 = { package = "futures", version = "0.1.29" }
async-trait = "0.1"
jsonrpsee = { version = "0.16", features = ["server"] }
tokio = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "tracing-log"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "poker-node"
path = "src/main.rs"
