[package]
name = "pallet-timestamp-consensus"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Timestamp consensus pallet with HLC"

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-inherents = { workspace = true }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-inherents/std",
]
